# RM_WHUT

./: README.md  abstract.md
AUTO/: README.md
ROBO7/: CMakeLists.txt  t.md
ROBO7/include/: Detector.h  Entities.h  Filter.h  Params.h  Perspective.h  Tracker.h  deprecated_uart.hpp  uart _new.hpp  uart.hpp
ROBO7/src/: main.cpp
Robo/: CMakeLists.txt
Robo/Camera_Driver/demo/OpenCv/: main.cpp
Robo/include/: Armor.h  LightBar.h  Params.h  Perspective.h  Preprocess.h
Robo/src/: Armor.cpp  KalmanFilter.hpp  LightBar.cpp  Params.cpp  Perspective.cpp  Preprocess.cpp  Robo.cpp  Robo_COPY.cpp  serial_send.hpp
RobowithYOLO/: CMakeLists.txt
RobowithYOLO/include/: Armor.h  LightBar.h  Params.h  Perspective.h  Preprocess.h
RobowithYOLO/src/: Robo.cpp  TRTModule.cpp  _camera.cpp  serial_send.hpp
RobowithYOLO/src/build_camera/: CMakeCache.txt  CMakeLists.txt  Makefile  ZED_Camera_Control  cmake_install.cmake
armor_detection/PnP/: detection_pnp.cpp  detection_pnp.h
roborts_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
roborts_ws/devel/include/Serial_Send/: Serial_Receive.h  Serial_Send.h
roborts_ws/devel/include/serial_send/: Serial_Receive.h  Serial_Send.h
roborts_ws/devel/lib/pkgconfig/: Serial_Send.pc  models_description.pc  publisher.pc  rmua_bot_description.pc  roborts_base.pc  roborts_bringup.pc  roborts_common.pc  roborts_costmap.pc  roborts_decision.pc  roborts_localization.pc  roborts_msgs.pc  roborts_nav.pc  roborts_planning.pc  rplidar_ros.pc  serial_send.pc
roborts_ws/devel/lib/publisher/: cmdvelsub
roborts_ws/devel/lib/roborts_base/: roborts_base_node
roborts_ws/devel/lib/roborts_costmap/: test_costmap
roborts_ws/devel/lib/roborts_decision/: behavior_test_node
roborts_ws/devel/lib/roborts_localization/: localization_node
roborts_ws/devel/lib/roborts_planning/: global_planner_node  global_planner_test  local_planner_node  teb_test  vel_converter
roborts_ws/devel/lib/rplidar_ros/: rplidarNode  rplidarNodeClient
roborts_ws/devel/lib/serial_send/: Serial_Receive  Serial_Send  sub_msg  topic_test
roborts_ws/src/models_description/: package.xml
roborts_ws/src/models_description/meshes/rm22_armor_module/: sticker_num1_0.dae  sticker_num2_0.dae  sticker_num2_1.dae  sticker_num2_3.dae
roborts_ws/src/models_description/urdf/rm21_light_indicator_module/: light_indicator_module.xacro
roborts_ws/src/models_description/urdf/rm22_armor_module/: armor_support.xacro  small_armor.xacro
roborts_ws/src/models_description/urdf/rm22_speed_monitor_module/: speed_monitor_module_17mm.xacro
roborts_ws/src/publisher/: CMakeLists.txt
roborts_ws/src/publisher/src/: cmdvelsub.cpp  pub.cpp
roborts_ws/src/rmua_bot_description/config/: rmua.rviz
roborts_ws/src/rmua_bot_description/launch/: rmua_bot_description.launch  rmua_bot_mapsaver.launch  rmua_bot_slam.launch  rmua_bot_world.launch  rmua_rviz.launch
roborts_ws/src/rmua_bot_description/map/: nav.pgm  nav.yaml  navv.pgm  navv.yaml
roborts_ws/src/rmua_bot_description/urdf/: camera2.xacro  chassis_wheel_r.xacro  rmua_robot.xacro
roborts_ws/src/rmua_bot_description/worlds/: map.csv  map.urdf  rmuamap.world
roborts_ws/src/roborts_bringup/launch/: base.launch  hector_slam.launch  mapping.launch  slam_gmapping.launch  static_tf.launch
roborts_ws/src/roborts_costmap/config/: inflation_layer_config.prototxt  inflation_layer_config_min.prototxt
roborts_ws/src/roborts_decision/: CMakeLists.txt
roborts_ws/src/roborts_localization/config/: localization.yaml
roborts_ws/src/roborts_localization/launch/: amcl.launch
roborts_ws/src/roborts_nav/: CMakeLists.txt  package.xml
roborts_ws/src/roborts_nav/launch/: move_base.launch  navigation.launch  patrol_nav.launch  slam.launch
roborts_ws/src/roborts_nav/maps/: 602.pgm  602.yaml
roborts_ws/src/roborts_nav/param/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
roborts_ws/src/roborts_nav/scripts/: min_scan.py  patrol_nav.py
roborts_ws/src/roborts_planning/global_planner/: CMakeLists.txt
roborts_ws/src/roborts_planning/local_planner/: CMakeLists.txt
roborts_ws/src/rplidar_ros-master/launch/: rplidar.launch
roborts_ws/src/serial_send/: CMakeLists.txt
roborts_ws/src/serial_send/launch/: test.launch
roborts_ws/src/serial_send/msg/: Serial_Send.msg
roborts_ws/src/serial_send/src/: Serial_Receive.cpp  Serial_Send.cpp  sub_msg.cpp  topic_test.cpp
robot_detection/PnP/: detection_pnp.cpp  detection_pnp.h
robot_detection/armor_detection/: armor_detecte.cpp  armor_detecte.h
robot_ws/: README.md
robot_ws/devel/: .catkin  setup.sh
robot_ws/devel/include/roborts_msgs/: ArmorDetectionAction.h  ArmorDetectionActionFeedback.h  ArmorDetectionActionGoal.h  ArmorDetectionActionResult.h  ArmorDetectionFeedback.h  ArmorDetectionGoal.h  ArmorDetectionResult.h  BonusStatus.h  FricWhlRequest.h  FricWhlResponse.h  GameResult.h  GameStatus.h  GameSurvivor.h  GimbalAngle.h  GimbalModeRequest.h  GimbalModeResponse.h  GimbalRate.h  GlobalPlannerAction.h  GlobalPlannerActionFeedback.h  GlobalPlannerActionGoal.h  GlobalPlannerActionResult.h  GlobalPlannerFeedback.h  GlobalPlannerGoal.h  GlobalPlannerResult.h  LocalPlannerAction.h  ObstacleMsg.h  (+18 more)
robot_ws/src/models_description/: CMakeLists.txt
robot_ws/src/rmua_bot_description/: CMakeLists.txt  package.xml
robot_ws/src/rmua_bot_description/config/: rmua.rviz  rmua_bot_control.yaml
robot_ws/src/rmua_bot_description/launch/: rmua_bot_description.launch  rmua_bot_mapsaver.launch  rmua_bot_slam.launch  rmua_bot_world.launch  rmua_rviz.launch  topics.txt
robot_ws/src/rmua_bot_description/map/: 2022.pgm  2022map.pgm  nav.pgm  nav.yaml
robot_ws/src/rmua_bot_description/urdf/: camera1.xacro  chassis_wheel_l.xacro  laser.xacro  nexus_4wd_mecanum.gazebo  rmua_bot.gazebo
stm32_test/: serial_on_nano.cpp
stm32_test/stm32_test/devel/: .catkin  local_setup.sh
vision_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
vision_ws/src/RobowithYOLO/: CMakeLists.txt
(+126 files in other folders)
